--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
     <title>Ćirilica-latinica</title>
 </head>
 <body>
-    <h1>Onlinity</h1>
+    <header>
+        <img src="icon.png" alt="onlinity">
+        <h1>Ćirilica-latinica</h1>
+      </header>
     
     <div class="content">
         <div class="odabir">
@@ -35,18 +38,10 @@
 
     <footer>
         <div class="media">
-            <i class="fa fa-facebook"></i>
-            <i class="fa fa-instagram"></i>
-            <i class="fa fa-twitter"></i>
-            <i class="fa fa-linkedin"></i>
+            <a href="https://ignjatovicpavle.github.io/"><i class="fa-solid fa-user fa-flip" style="--fa-animation-duration: 2s;"></i></a>
+            <a target="_blank" href="mailto:pavle.ignjatovic.08@gmail.com" title="pavle.ignjatovic.08@gmail.com"><i class="fa-solid fa-envelope fa-flip" style="--fa-animation-duration: 2s;"></i></a>
         </div>
         <p>Copyright © 2022 Pavle Ignjatović, Onlinity</p>
-    </footer>
-
-    <script>
-        document.getElementById('submit').onclick = function(){
-            //console.log('abcd')
-        }
-    </script>
+      </footer>
 </body>
 </html>
